--- a/Neighborhoods_Toronto.ipynb
+++ b/Neighborhoods_Toronto.ipynb
@@ -13,8 +13,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd "
+    "import requests\n",
+    "import lxml.html as lh\n",
+    "import pandas as pd \n",
+    "from bs4 import BeautifulSoup\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract data using Beautiful Soup "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract data using Beautiful Soup \n",
+    "url='https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M'\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.content,'lxml')\n",
+    "table = soup.find_all('table')[0] \n",
+    "data = pd.read_html(str(table))\n",
+    "df = pd.DataFrame(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean data with not assigned values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get indexes for which he column Borough is not assigned \n",
+    "indexNames = df[ df['Borough'] == 'Not assigned' ].index\n",
+    "# Delete these row indexes from dataFrame\n",
+    "df.drop(indexNames, inplace=True)\n",
+    "df.head (5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace the character \"/\" with a comma in neighborhood  \n",
+    "df['Neighborhood'] = df['Neighborhood'].apply(lambda x : x.replace ('/',',',1) ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Where Neighborhood is not assigned, set it equal to Borough \n",
+    "df.loc[df['Neighborhood'] == 'Not assigned', \"Borough\" ] \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
