--- a/Neighborhoods_Toronto-question3.ipynb
+++ b/Neighborhoods_Toronto-question3.ipynb
@@ -946,27 +946,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your credentails:\n",
-      "CLIENT_ID: 02G45DAR5A4SZEQXV5ZJ5EKTZCEBQSTAETCINO5OSI231FE5\n",
-      "CLIENT_SECRET:4VCMNSOP3VFRO5JTURCHXL4TDY3TGM0C2S1GCU5Y3FMUXPZE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CLIENT_ID = 'your-client-ID' # your Foursquare ID\n",
     "# CLIENT_SECRET = 'your-client-secret' # your Foursquare Secret\n",
-    "VERSION = '20180605' # Foursquare API version\n",
+    "# VERSION = '20180605' # Foursquare API version\n",
     "\n",
-    "print('Your credentails:')\n",
-    "print('CLIENT_ID: ' + CLIENT_ID)\n",
-    "print('CLIENT_SECRET:' + CLIENT_SECRET)"
+    "# print('Your credentails:')\n",
+    "# print('CLIENT_ID: ' + CLIENT_ID)\n",
+    "# print('CLIENT_SECRET:' + CLIENT_SECRET)"
    ]
   },
   {
