--- a/Battle_of_neighborhoods_Barcelona -v1.ipynb
+++ b/Battle_of_neighborhoods_Barcelona -v1.ipynb
@@ -1088,27 +1088,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 292,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your credentails:\n",
-      "CLIENT_ID: 02G45DAR5A4SZEQXV5ZJ5EKTZCEBQSTAETCINO5OSI231FE5\n",
-      "CLIENT_SECRET:4VCMNSOP3VFRO5JTURCHXL4TDY3TGM0C2S1GCU5Y3FMUXPZE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "CLIENT_ID = '02G45DAR5A4SZEQXV5ZJ5EKTZCEBQSTAETCINO5OSI231FE5' # your Foursquare ID\n",
-    "CLIENT_SECRET = '4VCMNSOP3VFRO5JTURCHXL4TDY3TGM0C2S1GCU5Y3FMUXPZE' # your Foursquare Secret\n",
-    "VERSION = '20180604'\n",
-    "LIMIT = 100\n",
-    "print('Your credentails:')\n",
-    "print('CLIENT_ID: ' + CLIENT_ID)\n",
-    "print('CLIENT_SECRET:' + CLIENT_SECRET)\n"
+    "# Hidden info \n"
    ]
   },
   {
